# tree-sitter-malleable-c2

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: c2.txt
