[package]
name = "tree-sitter-malleable-c2"
description = "malleable-c2 grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "malleable-c2"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Henkru/tree-sitter-malleable-c2"
edition = "2023"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
